tests/baselines/reference/capturedLetConstInLoop2(strict=true).errors.txt
capturedLetConstInLoop2.ts(2,15): error TS7006: Parameter 'x' implicitly has an 'any' type.
capturedLetConstInLoop2.ts(10,17): error TS7006: Parameter 'x' implicitly has an 'any' type.
capturedLetConstInLoop2.ts(18,15): error TS7006: Parameter 'x' implicitly has an 'any' type.
capturedLetConstInLoop2.ts(26,15): error TS7006: Parameter 'x' implicitly has an 'any' type.
capturedLetConstInLoop2.ts(34,15): error TS7006: Parameter 'x' implicitly has an 'any' type.
capturedLetConstInLoop2.ts(36,13): error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
capturedLetConstInLoop2.ts(38,30): error TS7005: Variable 'x' implicitly has an 'any' type.
capturedLetConstInLoop2.ts(39,16): error TS7005: Variable 'x' implicitly has an 'any' type.
capturedLetConstInLoop2.ts(43,15): error TS7006: Parameter 'x' implicitly has an 'any' type.
capturedLetConstInLoop2.ts(52,15): error TS7006: Parameter 'x' implicitly has an 'any' type.
capturedLetConstInLoop2.ts(61,15): error TS7006: Parameter 'x' implicitly has an 'any' type.
capturedLetConstInLoop2.ts(63,13): error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
capturedLetConstInLoop2.ts(63,16): error TS7034: Variable 'y' implicitly has type 'any' in some locations where its type cannot be determined.
capturedLetConstInLoop2.ts(65,30): error TS7005: Variable 'x' implicitly has an 'any' type.
capturedLetConstInLoop2.ts(65,34): error TS7005: Variable 'y' implicitly has an 'any' type.
capturedLetConstInLoop2.ts(66,16): error TS7005: Variable 'x' implicitly has an 'any' type.
capturedLetConstInLoop2.ts(66,20): error TS7005: Variable 'y' implicitly has an 'any' type.
capturedLetConstInLoop2.ts(70,15): error TS7006: Parameter 'x' implicitly has an 'any' type.
capturedLetConstInLoop2.ts(72,13): error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
capturedLetConstInLoop2.ts(72,16): error TS7034: Variable 'y' implicitly has type 'any' in some locations where its type cannot be determined.
capturedLetConstInLoop2.ts(74,30): error TS7005: Variable 'x' implicitly has an 'any' type.
capturedLetConstInLoop2.ts(74,34): error TS7005: Variable 'y' implicitly has an 'any' type.
capturedLetConstInLoop2.ts(75,16): error TS7005: Variable 'x' implicitly has an 'any' type.
capturedLetConstInLoop2.ts(75,20): error TS7005: Variable 'y' implicitly has an 'any' type.
capturedLetConstInLoop2.ts(80,15): error TS7006: Parameter 'x' implicitly has an 'any' type.
capturedLetConstInLoop2.ts(89,17): error TS7006: Parameter 'x' implicitly has an 'any' type.
capturedLetConstInLoop2.ts(97,19): error TS7006: Parameter 'x' implicitly has an 'any' type.
capturedLetConstInLoop2.ts(105,17): error TS7006: Parameter 'x' implicitly has an 'any' type.
capturedLetConstInLoop2.ts(113,17): error TS7006: Parameter 'x' implicitly has an 'any' type.
capturedLetConstInLoop2.ts(121,17): error TS7006: Parameter 'x' implicitly has an 'any' type.
capturedLetConstInLoop2.ts(130,17): error TS7006: Parameter 'x' implicitly has an 'any' type.
capturedLetConstInLoop2.ts(139,17): error TS7006: Parameter 'x' implicitly has an 'any' type.
capturedLetConstInLoop2.ts(148,17): error TS7006: Parameter 'x' implicitly has an 'any' type.
capturedLetConstInLoop2.ts(157,17): error TS7006: Parameter 'x' implicitly has an 'any' type.
capturedLetConstInLoop2.ts(167,17): error TS7006: Parameter 'x' implicitly has an 'any' type.


==== capturedLetConstInLoop2.ts (35 errors) ====
    // ========let
    function foo0(x) {
                  ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        for (let x of []) {
            let a = arguments.length;
            (function() { return x + a });
            (() => x + a);
        }
    }
    
    function foo0_1(x) {
                    ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        for (let x in []) {
            let a = arguments.length;
            (function() { return x + a });
            (() => x + a);
        }
    }
    
    function foo1(x) {
                  ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        for (let x = 0; x < 1; ++x) {
            let a = arguments.length;
            (function() { return x + a });
            (() => x + a);
        }
    }
    
    function foo2(x) {
                  ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        while (1 === 1) {
            let a = arguments.length;
            (function() { return x + a });
            (() => x + a);
        }
    }
    
    function foo3(x) {
                  ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        do {
            let x;
                ~
!!! error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
            let a = arguments.length;
            (function() { return x + a });
                                 ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
            (() => x + a);
                   ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
        } while (1 === 1)
    }
    
    function foo4(x) {
                  ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        for (let y = 0; y < 1; ++y) {
            let a = arguments.length;
            let x = 1;
            (function() { return x + a });
            (() => x + a);
        }
    }
    
    function foo5(x) {
                  ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        for (let x = 0, y = 1; x < 1; ++x) {
            let a = arguments.length;
            (function() { return x + y + a });
            (() => x + y + a);
        }
    }
    
    
    function foo6(x) {
                  ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        while (1 === 1) {
            let x, y;
                ~
!!! error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
                   ~
!!! error TS7034: Variable 'y' implicitly has type 'any' in some locations where its type cannot be determined.
            let a = arguments.length;
            (function() { return x + y + a });
                                 ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
                                     ~
!!! error TS7005: Variable 'y' implicitly has an 'any' type.
            (() => x + y + a);
                   ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
                       ~
!!! error TS7005: Variable 'y' implicitly has an 'any' type.
        }
    }
    
    function foo7(x) {
                  ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        do {
            let x, y;
                ~
!!! error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
                   ~
!!! error TS7034: Variable 'y' implicitly has type 'any' in some locations where its type cannot be determined.
            let a = arguments.length;
            (function() { return x + y + a });
                                 ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
                                     ~
!!! error TS7005: Variable 'y' implicitly has an 'any' type.
            (() => x + y + a);
                   ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
                       ~
!!! error TS7005: Variable 'y' implicitly has an 'any' type.
        } while (1 === 1)
    }
    
    
    function foo8(x) {
                  ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        for (let y = 0; y < 1; ++y) {
            let x = 1;
            let a = arguments.length;
            (function() { return x + y + a });
            (() => x + y + a);
        }
    }
    ///=======const
    function foo0_c(x) {
                    ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        for (const x of []) {
            const a = arguments.length;
            (function() { return x + a });
            (() => x + a);
        }
    }
    
    function foo0_1_c(x) {
                      ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        for (const x in []) {
            const a = arguments.length;
            (function() { return x + a });
            (() => x + a);
        }
    }
    
    function foo1_c(x) {
                    ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        for (const x = 0; x < 1;) {
            const a = arguments.length;
            (function() { return x + a });
            (() => x + a);
        }
    }
    
    function foo2_c(x) {
                    ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        while (1 === 1) {
            const a = arguments.length;
            (function() { return x + a });
            (() => x + a);
        }
    }
    
    function foo3_c(x) {
                    ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        do {
            const x = 1;
            const a = arguments.length;
            (function() { return x + a });
            (() => x + a);
        } while (1 === 1)
    }
    
    function foo4_c(x) {
                    ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        for (const y = 0; y < 1;) {
            const a = arguments.length;
            const x = 1;
            (function() { return x + a });
            (() => x + a);
        }
    }
    
    function foo5_c(x) {
                    ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        for (const x = 0, y = 1; x < 1;) {
            const a = arguments.length;
            (function() { return x + y + a });
            (() => x + y + a);
        }
    }
    
    
    function foo6_c(x) {
                    ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        while (1 === 1) {
            const x = 1, y =1 ;
            const a = arguments.length;
            (function() { return x + y + a });
            (() => x + y + a);
        }
    }
    
    function foo7_c(x) {
                    ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        do {
            const x = 1, y = 1;
            const a = arguments.length;
            (function() { return x + y + a });
            (() => x + y + a);
        } while (1 === 1)
    }
    
    
    function foo8_c(x) {
                    ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        for (const y = 0; y < 1;) {
            const x = 1;
            const a = arguments.length;
            (function() { return x + y + a });
            (() => x + y + a);
        }
    }